first step redesigning website
removing unused sections

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <hgroup>
             <h1><a href="index.html">Diogo Ferreira Pacheco</a></h1>
-            <h3>Phd Student at Florida Institute of Technology - Computer Science Department</h3>
+            <h3>Phd Candidate at Florida Institute of Technology - School of Computing</h3>
         </hgroup>
 
         <nav>
@@ -58,8 +58,8 @@
                 <li><a href="#main">Home</a></li>
                 <li><a href="#publications">Publications</a></li>
                 <li><a href="#presentations">Presentations</a></li>
-                <li><a href="#classes">Classes</a></li>
-                <li><a href="#about-us">About Me</a></li>
+                <li><a href="#classes">Education</a></li>
+               <!-- <li><a href="#about-us">About Me</a></li> -->
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -76,9 +76,9 @@
         <div class="intro-box">
            <h1>Welcome / Bem-Vindo.</h1>
 
-           <p class="intro">My name is Diogo Ferreira Pacheco. I am a PhD Student member of <a href="http://cs.fit.edu/~rmenezes/BioComplexSite/BioComplex_Laboratory" target="_blank">BioComplex Lab</a> at <a href="http://www.fit.edu" target="_blank">Florida Institute of Technology</a> sponsored by <a href="http://www.cienciasemfronteiras.gov.br/web/csf-eng/" target="_blank">Science Without Borders</a> Brazilian program. I also colaborate as an invited researcher of <a href="http://www.cirg.ecomp.poli.br/" target="_blank">Computational Intelligence Research Group</a> at <a href="http://www.upe.br/" target="_blank">University of Pernambuco</a>.</p>
+           <p class="intro">My name is Diogo F. Pacheco. I am a PhD Canditate under the supervision of <a href="http://cs.fit.edu/~rmenezes/" target="_blank">Prof. Ronaldo Menezes</a> at <a href="http://www.fit.edu" target="_blank">Florida Institute of Technology</a>. My research interests lie at the exploration of social media data via the examination of the digital footprints as a proxy for understanding human behavior. I am member of <a href="http://cs.fit.edu/~rmenezes/BioComplexSite/BioComplex_Laboratory" target="_blank">BioComplex Lab</a> and I also colaborate as an invited researcher of <a href="http://www.cirg.ecomp.poli.br/" target="_blank">Computational Intelligence Research Group</a> at <a href="http://www.upe.br/" target="_blank">University of Pernambuco</a>. Here, you can find my <a href="#publications">publications</a> and <a href="http://my.fit.edu/~dpacheco2013/files/CV-DiogoPacheco-20161202.pdf" target="_blank">curriculum vitae</a>.</p>
 
-           <p class="intro">This site is under construction.</p>
+           <!-- p class="intro">This site is under construction.</p -->
 
         </div>
 
@@ -243,7 +243,7 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
 
       <!-- classes -->
       <section id="classes">
-			<h1>Classes.</h1>
+			<h1>Education</h1>
 <dt>Proposal exam, August 2016, FIT - Melbourne</dt>
 <dd>On the Relation Between Social Activities and Social-Economic Structures
 <br><a href="http://prezi.com/5hirc-todhwn/?utm_campaign=share&utm_medium=copy&rc=ex0share" target="_blank">Presentation</a></dd>
@@ -253,7 +253,7 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
 <br><a href="http://prezi.com/qg9y61yzvln2/?utm_campaign=share&utm_medium=copy&rc=ex0share" target="_blank">Presentation</a></dd>
 <br>
 
-			<h2>CSE5656: COMPLEX NETWORKS</h2>
+<!--			<h2>CSE5656: COMPLEX NETWORKS</h2>
 
             <ul class="folio-list clearfix">
 
@@ -293,12 +293,12 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
                 </li>
 
             </ul>
-
+-->
             <a class="back-to-top" href="#main">Back to Top</a>
 
       </section>
 
-      <!-- about us -->
+<!-- about us 
       <section id="about-us" class="clearfix">
 
             <h1>About me.</h1>
@@ -314,6 +314,7 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
             <a class="back-to-top" href="#main">Back to Top</a>
 
       </section>
+-->
 
       <!-- contact -->
       <section id="contact" class="clearfix">
@@ -329,10 +330,6 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
                 
 
                     <h2>Contact Information</h2>
-
-
-                    <p>To be completed...</p>
-
                     <p>
 			Florida Institute of Technology
 			<br/>150 W. University Blvd
@@ -341,9 +338,22 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
                     </p>
 
                     <p>
-                    Email: <a href="mailto:dpacheco2013@my.fit.edu">dpacheco2013@my.fit.edu</a>
+                    Email: dpacheco [@] biocomplexlab.org
                     </p>
 
+
+            <aside>
+
+                    <h2>Follow Us</h2>
+
+                    <ul class="link-list social">
+                        <li class="researchgate"><a href="https://www.researchgate.net/profile/Df_Pacheco" target="_blank">ResearchGate</a></li>
+                        <li class="gscholar"><a href="https://scholar.google.com/citations?hl=en&user=wwDrVQUAAAAJ" target="_blank">Google Scholar</a></li>
+                        <li class="twitter"><a href="https://twitter.com/diogofpacheco" target="_blank">Twitter</a></li>
+                        <li class="linkedin"><a href="https://www.linkedin.com/in/diogofpacheco" target="_blank">Linkedin</a></li>
+                    </ul>
+
+            </aside>
 
 
             </div>
@@ -360,8 +370,8 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
             <li><a href="#main">Home</a></li>
             <li><a href="#publications">Publications</a></li>
             <li><a href="#presentations">Presentations</a></li>
-            <li><a href="#classes">Classes</a></li>
-            <li><a href="#about-us">About</a></li>
+            <li><a href="#classes">Education</a></li>
+         <!--   <li><a href="#about-us">About</a></li>  -->
             <li><a href="#contact">Contact</a></li>
             <!-- <li class="rss-feed"><a href="#">RSS Feed</a></li> -->
         </ul>
