fixing a bug in the cv link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="intro-box">
            <h1>Welcome / Bem-Vindo.</h1>
 
-           <p class="intro">My name is Diogo F. Pacheco. I am a PhD Canditate under the supervision of <a href="http://cs.fit.edu/~rmenezes/" target="_blank">Prof. Ronaldo Menezes</a> at <a href="http://www.fit.edu" target="_blank">Florida Institute of Technology</a>. My research interests lie at the exploration of social media data via the examination of the digital footprints as a proxy for understanding human behavior. I am member of <a href="http://cs.fit.edu/~rmenezes/BioComplexSite/BioComplex_Laboratory" target="_blank">BioComplex Lab</a> and I also colaborate as an invited researcher of <a href="http://www.cirg.ecomp.poli.br/" target="_blank">Computational Intelligence Research Group</a> at <a href="http://www.upe.br/" target="_blank">University of Pernambuco</a>. Here, you can find my <a href="#publications">publications</a> and <a href="http://my.fit.edu/~dpacheco2013/files/CV-DiogoPacheco-20161202.pdf" target="_blank">curriculum vitae</a>.</p>
+           <p class="intro">My name is Diogo F. Pacheco. I am a PhD Canditate under the supervision of <a href="http://cs.fit.edu/~rmenezes/" target="_blank">Prof. Ronaldo Menezes</a> at <a href="http://www.fit.edu" target="_blank">Florida Institute of Technology</a>. My research interests lie at the exploration of social media data via the examination of the digital footprints as a proxy for understanding human behavior. I am member of <a href="http://cs.fit.edu/~rmenezes/BioComplexSite/BioComplex_Laboratory" target="_blank">BioComplex Lab</a> and I also colaborate as an invited researcher of <a href="http://www.cirg.ecomp.poli.br/" target="_blank">Computational Intelligence Research Group</a> at <a href="http://www.upe.br/" target="_blank">University of Pernambuco</a>. Here, you can find my <a href="#publications">publications</a> and <a href="files/CV-DiogoPacheco-20161202.pdf" target="_blank">curriculum vitae</a>.</p>
 
            <!-- p class="intro">This site is under construction.</p -->
 
@@ -342,6 +342,7 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
                     </p>
 
 
+            </div>
             <aside>
 
                     <h2>Follow Us</h2>
@@ -349,14 +350,13 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
                     <ul class="link-list social">
                         <li class="researchgate"><a href="https://www.researchgate.net/profile/Df_Pacheco" target="_blank">ResearchGate</a></li>
                         <li class="gscholar"><a href="https://scholar.google.com/citations?hl=en&user=wwDrVQUAAAAJ" target="_blank">Google Scholar</a></li>
-                        <li class="twitter"><a href="https://twitter.com/diogofpacheco" target="_blank">Twitter</a></li>
                         <li class="linkedin"><a href="https://www.linkedin.com/in/diogofpacheco" target="_blank">Linkedin</a></li>
+                        <li class="twitter"><a href="https://twitter.com/diogofpacheco" target="_blank">Twitter</a></li>
                     </ul>
 
             </aside>
 
 
-            </div>
             <a class="back-to-top" href="#main">Back to Top</a>
 
      </section>
