--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
 			<h2>Masters</h2>
 				<dt>Dissertation, June 2008, UPE - Recife, Brazil</dt>
 				<dd>An Evolutionary Multi-Objective Approach to Decision Support in Sugarcane Harvest (in portuguese)
-				<br><a href="files/msc_dissertation-diogo_pacheco.pdf" target="_blank">PDF </a> <a href="https://www.researchgate.net/publication/268743408_Uma_Abordagem_Evolucionaria_Multi-Objetiva_Para_Suporte_a_Decisao_de_Colheitas_de_Cana-de-Acucar" target="_blank">Research Gate</a>
+				<br><u><a href="files/msc_dissertation-diogo_pacheco.pdf" target="_blank">PDF</a></u>, <u><a href="https://www.researchgate.net/publication/268743408_Uma_Abordagem_Evolucionaria_Multi-Objetiva_Para_Suporte_a_Decisao_de_Colheitas_de_Cana-de-Acucar" target="_blank">Research Gate</a></u>
 				</dd>
 			<h2>Bachelors</h2>
 				<dt>Dissertation, May 2006, UPE - Recife, Brazil</dt>
@@ -378,7 +378,7 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
             </div>
             <aside>
 
-                    <h2>Follow Us</h2>
+                    <h2>Follow Me</h2>
 
                     <ul class="link-list social">
                         <li class="researchgate"><a href="https://www.researchgate.net/profile/Df_Pacheco" target="_blank">ResearchGate</a></li>
