adding flairs publications

--- a/index.html
+++ b/index.html
@@ -152,6 +152,15 @@
 			 
 <br>
 
+			<dt>Towards a framework to assess social disorganization in neighborhoods using social media: a case study on football supporters in the United Kingdom</dt>
+			<dd>PACHECO, Diogo F.; OLIVEIRA, Marcos; MENEZES, Ronaldo. Towards a framework to assess social disorganization in neighborhoods using social media: a case study on football supporters in the United Kingdom. In: AI4BigData at the 30th International FLAIRS Conference, Marco Island, Florida, USA (To appear).<br>Download: <u><a href="#" target="_blank">PDF</a></u>, <u><a href="#" target="_blank">bib</a></u>, <u><a href="#" target="_blank">Research Gate</a></u></dd>
+
+<br>
+
+			<dt>Language as a Measure of Welfare</dt>
+			<dd>SAHA, Priya; PACHECO, Diogo F.; MENEZES, Ronaldo.  Language as a Measure of Welfare. In: AI4BigData at the 30th International FLAIRS Conference, Marco Island, Florida, USA (To appear).<br>Download: <u><a href="#" target="_blank">PDF</a></u>, <u><a href="#" target="_blank">bib</a></u>, <u><a href="#" target="_blank">Research Gate</a></u></dd>
+<br>
+
 			<dt>Characterization of Football Supporters from Twitter Conversations</dt>
 			<dd>PACHECO, Diogo F.; PINHEIRO, Diego; LIMA NETO, F. B.; RIBEIRO, Eraldo; MENEZES, R. . Characterization of Football Supporters from Twitter Conversations. In: 2016 IEEE/WIC/ACM International Conference on Web Intelligence (WI' 16), October 13-16, 2016.<br>Download: <u><a href="files/characterizing-football-supporters-accepted.pdf" target="_blank">PDF</a></u>, <u><a href="files/characterizing-football-supporters-accepted.bib" target="_blank">bib</a></u>, <u><a href="https://www.researchgate.net/publication/309286567_Characterization_of_Football_Supporters_from_Twitter_Conversations" target="_blank">Research Gate</a></u></dd>
 <br>
