updating cv and analytics path

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-43311454-1', 'fit.edu');
+  ga('create', 'UA-43311454-1', 'github.io');
   ga('send', 'pageview');
 
 </script>
@@ -75,7 +75,7 @@
         <div class="intro-box">
            <h1>Welcome / Bem-Vindo.</h1>
 
-           <p class="intro">My name is Diogo F. Pacheco. I am a PhD Canditate under the supervision of <a href="http://cs.fit.edu/~rmenezes/" target="_blank">Prof. Ronaldo Menezes</a> at <a href="http://www.fit.edu" target="_blank">Florida Institute of Technology</a>. My research interests lie at the exploration of social media data via the examination of the digital footprints as a proxy for understanding human behavior. I am member of <a href="http://cs.fit.edu/~rmenezes/BioComplexSite/BioComplex_Laboratory" target="_blank">BioComplex Lab</a> and I also colaborate as an invited researcher of <a href="http://www.cirg.ecomp.poli.br/" target="_blank">Computational Intelligence Research Group</a> at <a href="http://www.upe.br/" target="_blank">University of Pernambuco</a>. Here, you can find my <a href="#publications">publications</a> and <a href="files/CV-DiogoPacheco-20161202.pdf" target="_blank">curriculum vitae</a>.</p>
+           <p class="intro">My name is Diogo F. Pacheco. I am a PhD Canditate under the supervision of <a href="http://cs.fit.edu/~rmenezes/" target="_blank">Prof. Ronaldo Menezes</a> at <a href="http://www.fit.edu" target="_blank">Florida Institute of Technology</a>. My research interests lie at the exploration of social media data via the examination of the digital footprints as a proxy for understanding human behavior. I am member of <a href="http://cs.fit.edu/~rmenezes/BioComplexSite/BioComplex_Laboratory" target="_blank">BioComplex Lab</a> and I also colaborate as an invited researcher of <a href="http://www.cirg.ecomp.poli.br/" target="_blank">Computational Intelligence Research Group</a> at <a href="http://www.upe.br/" target="_blank">University of Pernambuco</a>. Here, you can find my <a href="#publications">publications</a> and <a href="files/CV-DiogoPacheco.pdf" target="_blank">curriculum vitae</a>.</p>
 
            <!-- p class="intro">This site is under construction.</p -->
 
