--- a/index.html
+++ b/index.html
@@ -277,11 +277,11 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
 			<h1>Education</h1>
 			<h2>Doctorate</h2>
 				<dt>Proposal exam, August 2016, FIT - Melbourne, USA</dt>
-				<dd>On the Relation Between Social Activities and Social-Economic Structures
+				<dd>On the Relation Between Social Activities and Socio-Economic Structures
 				<br><a href="http://prezi.com/5hirc-todhwn/?utm_campaign=share&utm_medium=copy&rc=ex0share" target="_blank">Presentation</a></dd>
 				<br>
 				<dt>Depth exam, February 2016, FIT - Melbourne, USA</dt>
-				<dd>On the Relation Between Social Activities and Social-Economic Structures
+				<dd>On the Relation Between Social Activities and Socio-Economic Structures
 				<br><a href="http://prezi.com/qg9y61yzvln2/?utm_campaign=share&utm_medium=copy&rc=ex0share" target="_blank">Presentation</a></dd>
 				<br>
 			<h2>Masters</h2>
