--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-91169293-1', 'github.io');
+  ga('create', 'UA-91169293-1', 'auto');
   ga('send', 'pageview');
 
   ga('create', 'UA-43311454-1', 'fit.edu');
