--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+if (window.location.hostname == "diogofpacheco.github.io"){
   ga('create', 'UA-91169293-1', 'auto');
-  ga('send', 'pageview');
-
+}
+else{
   ga('create', 'UA-43311454-1', 'fit.edu');
-  ga('send', 'pageview');
+}
+ga('send', 'pageview');
 
 </script>
 
