updating crime flairs paper title

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@ ga('send', 'pageview');
 
 <br>
 
-			<dt>Towards a framework to assess social disorganization in neighborhoods using social media: a case study on football supporters in the United Kingdom</dt>
-			<dd>PACHECO, Diogo F.; OLIVEIRA, Marcos; MENEZES, Ronaldo. Towards a framework to assess social disorganization in neighborhoods using social media: a case study on football supporters in the United Kingdom. In: AI4BigData at the 30th International FLAIRS Conference, Marco Island, Florida, USA (To appear).<br>Download: <u><a href="#" target="_blank">PDF</a></u>, <u><a href="#" target="_blank">bib</a></u>, <u><a href="#" target="_blank">Research Gate</a></u></dd>
+			<dt>Using Social Media to Assess Neighborhood Social Disorganization: A Case Study in the United Kingdom</dt>
+			<dd>PACHECO, Diogo F.; OLIVEIRA, Marcos; MENEZES, Ronaldo. Using Social Media to Assess Neighborhood Social Disorganization: A Case Study in the United Kingdom. In: AI4BigData at the 30th International FLAIRS Conference, Marco Island, Florida, USA (To appear).<br>Download: <u><a href="#" target="_blank">PDF</a></u>, <u><a href="#" target="_blank">bib</a></u>, <u><a href="#" target="_blank">Research Gate</a></u></dd>
 
 <br>
 
