adding content from hdmm - organ donation

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@ ga('send', 'pageview');
                 See more at <a href="https://www.researchgate.net/publication/266710061_Using_Interactions_in_the_Quantification_of_Media_Bias" target="_blank">Quantification of Media Bias</a>.
             </div>
             <div id="crime" class="nivo-html-caption">
-                Football and crime correlations. Manuscript under revision.
+                Football and crime correlations. To appear in May 2017.
             </div>
             <div id="poverty" class="nivo-html-caption">
                 Football and poverty correlations. Manuscript under preparation.
             </div>
             <div id="organs" class="nivo-html-caption">
-                Organs characterization. Manuscript under revision.
+                See more at <a href="https://www.researchgate.net/publication/316392627_Characterizing_Organ_Donation_Awareness_from_Social_Media" target="_blank">Characterizing Organ Donations</a>.
             </div>
             <div id="languages" class="nivo-html-caption">
                 Language from Twitter. Manuscript under revision.
@@ -158,7 +158,7 @@ ga('send', 'pageview');
 <br>
 
 			<dt>Characterizing Organ Donation Awareness from Social Media</dt>
-			<dd>PACHECO, Diogo F.; PINHEIRO, Diego; CADEIRAS, Martin; MENEZES, Ronaldo. Characterizing Organ Donation Awareness from Social Media. In: Data Engineering Workshops (ICDEW), 2017 IEEE 33rd International Conference on, San Diego, California, USA (To appear).<br>Download: <u><a href="#" target="_blank">PDF</a></u>, <u><a href="#" target="_blank">bib</a></u>, <u><a href="#" target="_blank">Research Gate</a></u></dd>
+			<dd>PACHECO, Diogo F.; PINHEIRO, Diego; CADEIRAS, Martin; MENEZES, Ronaldo. Characterizing Organ Donation Awareness from Social Media. In: Data Engineering Workshops (ICDEW), 2017 IEEE 33rd International Conference on, San Diego, California, USA, April 2017.<br>Download: <u><a href="files/organ_donation-hdmm-camera_ready.pdf" target="_blank">PDF</a></u>, <u><a href="files/organ_donation-hdmm-presentation.pdf" target="_blank">Presentation</a></u>, <u><a href="files/organ_donation-hdmm-bib.bib" target="_blank">bib</a></u>, <u><a href="https://www.researchgate.net/publication/316392627_Characterizing_Organ_Donation_Awareness_from_Social_Media" target="_blank">Research Gate</a></u></dd>
 
 <br>
 
