adding validation presentation

--- a/index.html
+++ b/index.html
@@ -286,6 +286,10 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
       <section id="classes">
 			<h1>Education</h1>
 			<h2>Doctorate</h2>
+				<dt>Validation presentation, May 2017, FIT - Melbourne, USA</dt>
+				<dd>I have results!
+				<br><a href="files/validation-rank.pptx" target="_blank">Presentation</a></dd>
+				<br>
 				<dt>Proposal exam, August 2016, FIT - Melbourne, USA</dt>
 				<dd>On the Relation Between Social Activities and Socio-Economic Structures
 				<br><a href="http://prezi.com/5hirc-todhwn/?utm_campaign=share&utm_medium=copy&rc=ex0share" target="_blank">Presentation</a></dd>
