adding crime flairs

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ ga('send', 'pageview');
                 See more at <a href="https://www.researchgate.net/publication/266710061_Using_Interactions_in_the_Quantification_of_Media_Bias" target="_blank">Quantification of Media Bias</a>.
             </div>
             <div id="crime" class="nivo-html-caption">
-                Football and crime correlations. To appear in May 2017.
+                See more at <a href="https://www.researchgate.net/publication/316794566_Using_Social_Media_to_Assess_Neighborhood_Social_Disorganization_a_Case_Study_in_the_United_Kingdom" target="_blank">Football and crime correlations</a> 
             </div>
             <div id="poverty" class="nivo-html-caption">
                 Football and poverty correlations. Manuscript under preparation.
@@ -163,7 +163,7 @@ ga('send', 'pageview');
 <br>
 
 			<dt>Using Social Media to Assess Neighborhood Social Disorganization: A Case Study in the United Kingdom</dt>
-			<dd>PACHECO, Diogo F.; OLIVEIRA, Marcos; MENEZES, Ronaldo. Using Social Media to Assess Neighborhood Social Disorganization: A Case Study in the United Kingdom. In: AI4BigData at the 30th International FLAIRS Conference, Marco Island, Florida, USA (To appear).<br>Download: <u><a href="#" target="_blank">PDF</a></u>, <u><a href="#" target="_blank">bib</a></u>, <u><a href="#" target="_blank">Research Gate</a></u></dd>
+			<dd>PACHECO, Diogo F.; OLIVEIRA, Marcos; MENEZES, Ronaldo. Using Social Media to Assess Neighborhood Social Disorganization: A Case Study in the United Kingdom. In: AI4BigData at the 30th International FLAIRS Conference, Marco Island, Florida, USA (To appear).<br>Download: <u><a href="files/arenas_crime-flairs-camera_ready.pdf" target="_blank">PDF</a></u>, <u><a href="#" target="_blank">bib</a></u>, <u><a href="https://www.researchgate.net/publication/316794566_Using_Social_Media_to_Assess_Neighborhood_Social_Disorganization_a_Case_Study_in_the_United_Kingdom" target="_blank">Research Gate</a></u></dd>
 
 <br>
 
