updating flairs references and
adding sensing languages

--- a/index.html
+++ b/index.html
@@ -157,18 +157,22 @@ ga('send', 'pageview');
 			 
 <br>
 
+			<dt>Sensing Language Relationships from Social Media</dt>
+			<dd>PACHECO, Diogo F.; SAHA, Priya; LIMA NETO, F. B.; MENEZES, R. . Sensing Language Relationships from Social Media. In: 2017 IEEE SmartWorld, Ubiquitous Intelligence and Computing, Advanced and Trusted Computed, Scalable Computing and Communications, Cloud and Big Data Computing, Internet of People and Smart City, August 4-8, 2017 (to appear).<br>Download: <u><a href="#" target="_blank">PDF</a></u>, <u><a href="#" target="_blank">bib</a></u>, <u><a href="#" target="_blank">Research Gate</a></u></dd>
+<br>
+
 			<dt>Characterizing Organ Donation Awareness from Social Media</dt>
 			<dd>PACHECO, Diogo F.; PINHEIRO, Diego; CADEIRAS, Martin; MENEZES, Ronaldo. Characterizing Organ Donation Awareness from Social Media. In: Data Engineering Workshops (ICDEW), 2017 IEEE 33rd International Conference on, San Diego, California, USA, April 2017.<br>Download: <u><a href="files/organ_donation-hdmm-camera_ready.pdf" target="_blank">PDF</a></u>, <u><a href="files/organ_donation-hdmm-presentation.pdf" target="_blank">Presentation</a></u>, <u><a href="files/organ_donation-hdmm-bib.bib" target="_blank">bib</a></u>, <u><a href="https://www.researchgate.net/publication/316392627_Characterizing_Organ_Donation_Awareness_from_Social_Media" target="_blank">Research Gate</a></u></dd>
 
 <br>
 
 			<dt>Using Social Media to Assess Neighborhood Social Disorganization: A Case Study in the United Kingdom</dt>
-			<dd>PACHECO, Diogo F.; OLIVEIRA, Marcos; MENEZES, Ronaldo. Using Social Media to Assess Neighborhood Social Disorganization: A Case Study in the United Kingdom. In: AI4BigData at the 30th International FLAIRS Conference, Marco Island, Florida, USA (To appear).<br>Download: <u><a href="files/arenas_crime-flairs-camera_ready.pdf" target="_blank">PDF</a></u>, <u><a href="#" target="_blank">bib</a></u>, <u><a href="https://www.researchgate.net/publication/316794566_Using_Social_Media_to_Assess_Neighborhood_Social_Disorganization_a_Case_Study_in_the_United_Kingdom" target="_blank">Research Gate</a></u></dd>
+			<dd>PACHECO, Diogo F.; OLIVEIRA, Marcos; MENEZES, Ronaldo. Using Social Media to Assess Neighborhood Social Disorganization: A Case Study in the United Kingdom. In: 30th Florida Artificial Intelligence Research Society Conference, Marco Island, Florida, USA, May 2017.<br>Download: <u><a href="files/arenas_crime-flairs-camera_ready.pdf" target="_blank">PDF</a></u>, <u><a href="files/Using Social Media to Assess Neighborhood Social Disorganization.pptx" target="_blank">Presentation</a></u>, <u><a href="files/arenas_crime-flairs.bib" target="_blank">bib</a></u>, <u><a href="https://www.researchgate.net/publication/316794566_Using_Social_Media_to_Assess_Neighborhood_Social_Disorganization_a_Case_Study_in_the_United_Kingdom" target="_blank">Research Gate</a></u></dd>
 
 <br>
 
 			<dt>Language as a Measure of Welfare</dt>
-			<dd>SAHA, Priya; PACHECO, Diogo F.; MENEZES, Ronaldo.  Language as a Measure of Welfare. In: AI4BigData at the 30th International FLAIRS Conference, Marco Island, Florida, USA (To appear).<br>Download: <u><a href="#" target="_blank">PDF</a></u>, <u><a href="#" target="_blank">bib</a></u>, <u><a href="#" target="_blank">Research Gate</a></u></dd>
+			<dd>SAHA, Priya; PACHECO, Diogo F.; MENEZES, Ronaldo.  Language as a Measure of Welfare. In: 30th Florida Artificial Intelligence Research Society Conference, Marco Island, Florida, USA, May 2017.<br>Download: <u><a href="files/language_welfare-flaris-proceedings.pdf" target="_blank">PDF</a></u>, <u><a href="files/language_welfare-flaris-presentation.pptx" target="_blank">Presentation</a></u>, <u><a href="files/language_welfare-flaris.bib" target="_blank">bib</a></u>, <u><a href="https://www.researchgate.net/publication/317096178_Language_as_a_Measure_of_Welfare" target="_blank">Research Gate</a></u></dd>
 <br>
 
 			<dt>Characterization of Football Supporters from Twitter Conversations</dt>
