adding flairs presentations

--- a/index.html
+++ b/index.html
@@ -256,22 +256,34 @@ PACHECO, Diogo F. ; REGUERIA, F. S. ; LIMA NETO, F. B. . Utilizacao de Redes Neu
              <h1>Presentations</h1>
 
 <br>
-<dt>July 2015, Recife</dt>
+<dt>May 2017, Marco Island, USA</dt>
+<dd>Using Social Media to Assess Neighborhood Social Disorganization: A Case Study in the United Kingdom. In: 30th Florida Artificial Intelligence Research Society Conference (FLAIRS), May 22-24, 2017.
+<br><a href="files/Using Social Media to Assess Neighborhood Social Disorganization.pptx" target="_blank">Presentation</a></dd>
+<br>
+
+<br>
+<dt>May 2017, Marco Island, USA</dt>
+<dd>Language as a Measure of Welfare. In: 30th Florida Artificial Intelligence Research Society Conference (FLAIRS), May 22-24, 2017.
+<br><a href="files/language_welfare-flaris-presentation.pptx" target="_blank">Presentation</a></dd>
+<br>
+
+<br>
+<dt>July 2015, Recife, Brazil</dt>
 <dd>Football Conversations: What Twitter Reveals about the 2014 World Cup. In: Brazilian Workshop on Social Network Analysis and Mining (CSBC 2015 - BraSNAM), July 21-22, 2015.
 <br><a href="https://prezi.com/3chcjrk2oeau/what-does-twitter-reveal-about-2014-fifa-world-cup/" target="_blank">Presentation</a></dd>
 <br>
 
-<dt>January 2015, Rio de Janeiro</dt>
+<dt>January 2015, Rio de Janeiro, Brazil</dt>
 <dd>Dynamics of Fans Borders During 2014 FIFA World Cup. In: NetScix 2015: International School and Conference on Network Science.
 <br><a href="https://prezi.com/gmm3zc9nqulc/dynamics-of-fans-borders-during-2014-fifa-world-cup/" target="_blank">Presentation</a></dd>
 <br>
 
-<dt>May 2014, Stanford</dt>
+<dt>May 2014, Stanford, USA</dt>
 <dd>Using Interactions in the Quantification of Media Bias. In: 2014 ASE BIGDATA/SOCIALCOM/CYBERSECURITY Conference, Stanford University, May 27-31, 2014.
 <br><a href="http://prezi.com/l1vhy-bjcuon/?utm_campaign=share&utm_medium=copy&rc=ex0share" target="_blank">Presentation</a></dd>
 <br>
 
-<dt>September 2008, Barcelona</dt>
+<dt>September 2008, Barcelona, Spain</dt>
 <dd>
 How Preferences Affect Productivity in the Sugarcane Harvest Problem a Comparative Study of a Two-Steps MOEA. In: 8th International Conference on Hybrid Intelligent Systems (HIS 2008).
 </dd>
@@ -292,25 +304,25 @@ Including Multi-Objective Abilities in the Hybrid Intelligent Suite for Decision
 			<h2>Doctorate</h2>
 				<dt>Validation presentation, May 2017, FIT - Melbourne, USA</dt>
 				<dd>I have results!
-				<br><a href="files/validation-rank.pptx" target="_blank">Presentation</a></dd>
+				<br><u><a href="files/validation-rank.pptx" target="_blank">Presentation</a></u></dd>
 				<br>
 				<dt>Proposal exam, August 2016, FIT - Melbourne, USA</dt>
 				<dd>On the Relation Between Social Activities and Socio-Economic Structures
-				<br><a href="http://prezi.com/5hirc-todhwn/?utm_campaign=share&utm_medium=copy&rc=ex0share" target="_blank">Presentation</a></dd>
+				<br><u><a href="http://prezi.com/5hirc-todhwn/?utm_campaign=share&utm_medium=copy&rc=ex0share" target="_blank">Presentation</a></u></dd>
 				<br>
 				<dt>Depth exam, February 2016, FIT - Melbourne, USA</dt>
 				<dd>On the Relation Between Social Activities and Socio-Economic Structures
-				<br><a href="http://prezi.com/qg9y61yzvln2/?utm_campaign=share&utm_medium=copy&rc=ex0share" target="_blank">Presentation</a></dd>
+				<br><u><a href="http://prezi.com/qg9y61yzvln2/?utm_campaign=share&utm_medium=copy&rc=ex0share" target="_blank">Presentation</a></u></dd>
 				<br>
 			<h2>Masters</h2>
-				<dt>Dissertation, June 2008, UPE - Recife, Brazil</dt>
+				<dt>Thesis, June 2008, UPE - Recife, Brazil</dt>
 				<dd>An Evolutionary Multi-Objective Approach to Decision Support in Sugarcane Harvest (in portuguese)
 				<br><u><a href="files/msc_dissertation-diogo_pacheco.pdf" target="_blank">PDF</a></u>, <u><a href="https://www.researchgate.net/publication/268743408_Uma_Abordagem_Evolucionaria_Multi-Objetiva_Para_Suporte_a_Decisao_de_Colheitas_de_Cana-de-Acucar" target="_blank">Research Gate</a></u>
 				</dd>
 			<h2>Bachelors</h2>
-				<dt>Dissertation, May 2006, UPE - Recife, Brazil</dt>
+				<dt>Thesis, May 2006, UPE - Recife, Brazil</dt>
 				<dd>Decision Support in Intelligent Systems for Agricultural Crops (in portuguese)
-				<br><a href="files/tcc_dissertation-diogo_pacheco.pdf" target="_blank">PDF</a>
+					<br><u><a href="files/tcc_dissertation-diogo_pacheco.pdf" target="_blank">PDF</a></u>
 				</dd>
 			
 <!--			<h2>CSE5656: COMPLEX NETWORKS</h2>
