adding sensing language material

--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@ ga('send', 'pageview');
 <br>
 
 			<dt>Sensing Language Relationships from Social Media</dt>
-			<dd>PACHECO, Diogo F.; SAHA, Priya; LIMA NETO, F. B.; MENEZES, R. . Sensing Language Relationships from Social Media. In: 2017 IEEE SmartWorld, Ubiquitous Intelligence and Computing, Advanced and Trusted Computed, Scalable Computing and Communications, Cloud and Big Data Computing, Internet of People and Smart City, August 4-8, 2017 (to appear).<br>Download: <u><a href="#" target="_blank">PDF</a></u>, <u><a href="#" target="_blank">bib</a></u>, <u><a href="#" target="_blank">Research Gate</a></u></dd>
+			<dd>PACHECO, Diogo F.; SAHA, Priya; LIMA NETO, F. B.; MENEZES, R. . Sensing Language Relationships from Social Media. In: 2017 IEEE SmartWorld, Ubiquitous Intelligence and Computing, Advanced and Trusted Computed, Scalable Computing and Communications, Cloud and Big Data Computing, Internet of People and Smart City, August 4-8, 2017.
+				<br>Download: <u><a href="files/sensing-languages-proceedings.pdf" target="_blank">PDF</a></u>, <u><a href="files/Sensing Language Relationships.pptx" target="_blank">Presentation</a></u>, <u><a href="files/sensing-languages.bib" target="_blank">bib</a></u>, <u><a href="https://www.researchgate.net/publication/318969918_Sensing_Language_Relationships_from_Social_Media" target="_blank">Research Gate</a></u></dd>
 <br>
 
 			<dt>Characterizing Organ Donation Awareness from Social Media</dt>
